--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta viewport="width=device-width, initial-scale=1">
     <meta description="Полярная экспедиция Георгия Брусилова на шхуне «Святая Анна». 1912—1914 гг.">
     <meta keywords="полярная экспедиция, георгий брусилова, святая анна, северный полюс">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="style.css">
     <title>Полярная экспедиция Георгия Брусилова 1912-1914</title>
 </head>
@@ -173,7 +173,7 @@
     <h2>Георгий Львович Брусилов</h2>
     <p>
         <figure class="img">
-            <img src="/img/Picture2.jpg" alt="Генерал Брусилов Алексей Николаевич" />
+            <img src="img/Picture2.jpg" alt="Генерал Брусилов Алексей Николаевич" />
             <figcaption>Генерал Брусилов Алексей Николаевич.</figcaption>
         </figure>
         Георгий Львович Брусилов был сыном видного деятеля Российского флота, создателя и первого начальника Морского
@@ -192,13 +192,13 @@
         исполнилось шесть лет, а младшему Льву — всего два года, родители скончались, и осиротевших детей взяли на
         воспитание сестра их матери Генриетта и ее муж, военный инженер Карл Гагемейстер.
         <figure class="img img--right">
-            <img src="/img/Picture3.jpg" alt="Брусилова (урожденная Нестроенская) Мария Антоновна." />
+            <img src="img/Picture3.jpg" alt="Брусилова (урожденная Нестроенская) Мария Антоновна." />
             <figcaption>Брусилова (урожденная Нестроенская) Мария Антоновна.</figcaption>
         </figure>
         Своих детей у них не было, они любили мальчиков, и их отношения до конца жизни оставались очень близкими. Братья
         получили прекрасное домашнее воспитание и образование, обучались языкам и музыке.
         <figure class="img">
-            <img src="/img/Picture4.jpg" alt="Мальчики Борис, Алексей и Лев Брусиловы. Начало 1960х годов" />
+            <img src="img/Picture4.jpg" alt="Мальчики Борис, Алексей и Лев Брусиловы. Начало 1960х годов" />
             <figcaption>Мальчики Борис, Алексей и Лев Брусиловы. Начало 1960х годов.</figcaption>
         </figure>
         После окончания гимназии Алексей, а за ним и Борис, успешно сдав конкурсные вступительные экзамены, были
@@ -218,7 +218,7 @@
         — гардемарином на пароходе Добровольного флота «Нижний Новгород» под военным флагом из Одессы во Владивосток и на
         Сахалин с заходами в Шанхай, Гонконг, Сингапур, порты Средиземного моря,
         <figure class="img img--right">
-            <img src="/img/Picture5.jpg" alt="Братья Брусиловы (слева направо): Борис, Лев и Алексей" />
+            <img src="img/Picture5.jpg" alt="Братья Брусиловы (слева направо): Борис, Лев и Алексей" />
             <figcaption>Братья Брусиловы (слева направо): Борис, Лев и Алексей</figcaption>
         </figure>
         Лондон. По возвращении из рейса в 1879 году он был произведен в мичманы «2го Черноморского флотского Его
@@ -232,7 +232,7 @@
     </p>
     <p>
         <figure class="img">
-            <img src="/img/Picture6.jpg" alt="Лев Алексеевич Брусилов. 1879 год." />
+            <img src="img/Picture6.jpg" alt="Лев Алексеевич Брусилов. 1879 год." />
             <figcaption>Лев Алексеевич Брусилов. 1879 год.</figcaption>
         </figure>
         Георгий (Юра) родился 6 мая 1884 года. Он был третьим ребенком в семье, до него уже родились две девочки — Татьяна
@@ -250,7 +250,7 @@
     <p>
         <figure class="img img--right">
             <img
-                    src="/img/Picture7.jpg"
+                    src="img/Picture7.jpg"
                     alt="Жена Льва Алексеевича — Екатерина Константиновна Брусилова, урожденная Панютина. 1884 год."
             />
             <figcaption>
@@ -283,7 +283,7 @@
         [2].
         <figure class="img">
             <img
-                    src="/img/Picture8.jpg"
+                    src="img/Picture8.jpg"
                     alt="Дети Льва Алексеевича и Екатерины Константиновны Брусиловых: Юра, Татьяна, Сергей и Ксения. Конец 1890х годов."
             />
             <figcaption>
@@ -316,7 +316,7 @@
     </p>
     <p>
         <figure class="img img--right">
-            <img src="/img/Picture9.jpg" alt="Капитан 2го ранга Лев Алексеевич Брусилов. Середина 1890х годов." />
+            <img src="img/Picture9.jpg" alt="Капитан 2го ранга Лев Алексеевич Брусилов. Середина 1890х годов." />
             <figcaption>Капитан 2го ранга Лев Алексеевич Брусилов. Середина 1890х годов.</figcaption>
         </figure>
         В августе 1900 года Лев Алексеевич был назначен командиром канонерской лодки «Отважный». Во время войны с Китаем
@@ -351,7 +351,7 @@
     </p>
     <p>
         <figure class="img">
-            <img src="/img/Picture10.jpg" alt="Юра Брусилов кадет, на младшем курсе Морского корпуса." />
+            <img src="img/Picture10.jpg" alt="Юра Брусилов кадет, на младшем курсе Морского корпуса." />
             <figcaption>Юра Брусилов кадет, на младшем курсе Морского корпуса.</figcaption>
         </figure>
         Переговоры прошли неудачно, торговая сделка не состоялась, и Лев Алексеевич вернулся в Петербург, а оттуда поездом
@@ -401,7 +401,7 @@
     <p>
         <figure class="img img--right">
             <img
-                    src="/img/Picture11.jpg"
+                    src="img/Picture11.jpg"
                     alt="Начало письма Льва Алексеевича Брусилова к жене из Владивостока о том, что «...приехал Юра». 30 мая 1905 года."
             />
             <figcaption>
@@ -438,7 +438,7 @@
         >
         [13].
         <figure class="img">
-            <img src="/img/Picture12.jpg" alt="Контрадмирал Лев Алексеевич Брусилов. 1907год." />
+            <img src="img/Picture12.jpg" alt="Контрадмирал Лев Алексеевич Брусилов. 1907год." />
             <figcaption>Контрадмирал Лев Алексеевич Брусилов. 1907год.</figcaption>
         </figure>
     </p>
@@ -516,7 +516,7 @@
     </p>
     <p>
         <figure class="img">
-            <img src="/img/Picture13.jpg" alt="Георгий Львович Брусилов. 1904—1905 год." />
+            <img src="img/Picture13.jpg" alt="Георгий Львович Брусилов. 1904—1905 год." />
             <figcaption>Георгий Львович Брусилов. 1904—1905 год.</figcaption>
         </figure>
         В самом конце октября 1909 года «Вайгач», командиром которого был назначен А. В. Колчак, и «Таймыр» вышли из
@@ -582,7 +582,7 @@
     </p>
     <p>
         <figure class="img img--right">
-            <img src="/img/Picture14.jpg" alt="Борис Алексеевич Брусилов. 1889 год." />
+            <img src="img/Picture14.jpg" alt="Борис Алексеевич Брусилов. 1889 год." />
             <figcaption>Борис Алексеевич Брусилов. 1889 год.</figcaption>
         </figure>
         Прежде всего, необходимо было найти деньги. Своих средств у него не было, на помощь морского ведомства ему наде
@@ -612,7 +612,7 @@
     <p>
         <figure class="img">
             <img
-                    src="/img/Picture15.jpg"
+                    src="img/Picture15.jpg"
                     alt="Анна Николаевна Брусилова, урожденная Рено, в день венчания. Петербург, 15 апреля 1887 года."
             />
             <figcaption>
@@ -630,7 +630,7 @@
         перепоручила все хозяйственные дела мужу, и Борис Алексеевич «окончательно сделался помещиком». Интересно, что
         село стали называть ГлебовоБрусилово, и это название сохранялось до 1960х годов.
         <figure class="img img--right">
-            <img src="/img/Picture16.jpg" alt="Глебово — имение Анны Николаевны и Бориса Алексеевича Брусиловых." />
+            <img src="img/Picture16.jpg" alt="Глебово — имение Анны Николаевны и Бориса Алексеевича Брусиловых." />
             <figcaption>Глебово — имение Анны Николаевны и Бориса Алексеевича Брусиловых.</figcaption>
         </figure>
     </p>
@@ -642,7 +642,7 @@
         кадетском корпусе. Они часто проводили в Глебово каникулы или приезжали, чтобы встретить праздники или просто
         собраться всем вместе.
         <figure class="img img--right">
-            <img src="/img/Picture17.jpg" alt="Сын Бориса Алексеевича Алеша на корейской лошадке." />
+            <img src="img/Picture17.jpg" alt="Сын Бориса Алексеевича Алеша на корейской лошадке." />
             <figcaption>Сын Бориса Алексеевича Алеша на корейской лошадке.</figcaption>
         </figure>
         Однажды, чтобы порадовать своих маленьких племянниц Ольгу и Елену, Лев Алексеевич отправил им в Глебово
@@ -660,7 +660,7 @@
     <p>
         <figure class="img">
             <img
-                    src="/img/Picture18.jpg"
+                    src="img/Picture18.jpg"
                     alt="Дети Брусиловы в Глебове — Георгий (слева), дочери Бориса Алексеевича Ольга и Елена и сын Алексея Алексеевича Алеша. Начало 1900х годов."
             />
             <figcaption>
@@ -683,7 +683,7 @@
         и организацию экспедиции могла уйти значительная часть сбережений, и было страшно в слувае неудачи остаться без
         средств существования.
         <figure class="img img--right">
-            <img src="/img/Picture19.jpg" alt="Семейное фото Брусиловых в Глебове." />
+            <img src="img/Picture19.jpg" alt="Семейное фото Брусиловых в Глебове." />
             <figcaption>
                 Семейное фото Брусиловых в Глебове: в первом ряду Георгий Брусилов и дочери Бориса Алексеевича Ольга и Елена,
                 во втором ряду (слева направо) — Алексей Алексеевич Брусилов, Екатерина Константиновна и Лев Алексеевич
@@ -724,7 +724,7 @@
     <p>
         <figure class="img">
             <img
-                    src="/img/Picture20.jpg"
+                    src="img/Picture20.jpg"
                     alt="Начало письма Георгия Львовича Брусилова к матери из Лондона о покупке судна. 5 апреля 1912 года."
             />
             <figcaption>
@@ -855,7 +855,7 @@
     <p>
         <figure class="img">
             <img
-                    src="/img/Picture21.jpg"
+                    src="img/Picture21.jpg"
                     alt="Зверобойная шхуна полярной экспедиции Георгия Брусилова «святая Анна» в Петербурге у Николаевского моста. Июль 1912 года."
             />
             <figcaption>
@@ -973,7 +973,7 @@
     <h2>Ерминия Александровна Жданко</h2>
     <figure class="img img--right">
         <img
-                src="/img/Picture22.jpg"
+                src="img/Picture22.jpg"
                 alt="Евреинова Анна Михайловна (сидит слева); с правого края — ее сестра, бабушка Мимы, Ерминия Михайловна Бороздина, урожденная Евреинова. У нее за спиной стоит ее дочь — Ерминия Георгиевна Бороздина, будущая мать Мимы. Конец 1880-х годов."
         />
         <figcaption>
@@ -997,7 +997,7 @@
     <p>
         <figure class="img">
             <img
-                    src="/img/Picture23.jpg"
+                    src="img/Picture23.jpg"
                     alt="Мима с матерью, Ерминией Георгиевной Жданко, урожденной Бороздиной. 1894 год."
             />
             <figcaption>Мима с матерью, Ерминией Георгиевной Жданко, урожденной Бороздиной. 1894 год.</figcaption>
@@ -1010,7 +1010,7 @@
         поисков пропавших экспедиций Седова, Брусилова и Русанова.
     </p>
     <figure class="img img--right">
-        <img src="/img/Picture24.jpg" alt="Борис Иосифович Доливо-Добровольский. 1890-е годы" />
+        <img src="img/Picture24.jpg" alt="Борис Иосифович Доливо-Добровольский. 1890-е годы" />
         <figcaption>Борис Иосифович Доливо-Добровольский. 1890-е годы.</figcaption>
     </figure>
     <p>
@@ -1033,7 +1033,7 @@
     </p>
     <figure class="img">
         <img
-                src="/img/Picture25.jpg"
+                src="img/Picture25.jpg"
                 alt="Тамара Иосифовна Доливо-Добровольская — гимназистка (сидит в кресле) со своей старшей сестрой Ольгой. Начало 1890-х годов."
         />
         <figcaption>
@@ -1071,7 +1071,7 @@
         что на Большом Фонтане города Одессы, церкви».
     </p>
     <figure class="img img--right">
-        <img src="/img/Picture26.jpg" alt="Александр Ефимович Жданко. 1904 год." />
+        <img src="img/Picture26.jpg" alt="Александр Ефимович Жданко. 1904 год." />
         <figcaption>Александр Ефимович Жданко. 1904 год.</figcaption>
     </figure>
     <p>
@@ -1093,7 +1093,7 @@
         уничтожила — сложные были времена.
     </p>
     <figure class="img">
-        <img src="/img/Picture27.jpg" alt="Тамара Иосифовна Жданко, урожденная Доливо-Добровольская. 1904 год." />
+        <img src="img/Picture27.jpg" alt="Тамара Иосифовна Жданко, урожденная Доливо-Добровольская. 1904 год." />
         <figcaption>Тамара Иосифовна Жданко, урожденная Доливо-Добровольская. 1904 год.</figcaption>
     </figure>
     <p>
@@ -1114,7 +1114,7 @@
         брату. Она часто уезжала из дома, но никогда — надолго, и всегда с радостью возвращалась.
     </p>
     <figure class="img img--right">
-        <img src="/img/Picture28.jpg" alt="Анна Михайловна Евреинова. Конец 1890-х годов." />
+        <img src="img/Picture28.jpg" alt="Анна Михайловна Евреинова. Конец 1890-х годов." />
         <figcaption>Анна Михайловна Евреинова. Конец 1890-х годов.</figcaption>
     </figure>
     <p>
@@ -1148,7 +1148,7 @@
     </p>
     <figure class="img img--right">
         <img
-                src="/img/Picture30.jpg"
+                src="img/Picture30.jpg"
                 alt="Ерминия Жданко в своем имении Пилипы верхом на любимом белом коне Арабчике. Около 1910 года."
         />
         <figcaption>
@@ -1167,7 +1167,7 @@
     </p>
     <figure class="img">
         <img
-                src="/img/Picture31.jpg"
+                src="img/Picture31.jpg"
                 alt="Борис Иосифович и Ксения Львовна (урожденная Брусилова) Доливо-Добровольские. 1911—1912 год."
         />
         <figcaption>
@@ -1200,7 +1200,7 @@
         >[26].
     </p>
     <figure class="img img--right">
-        <img src="/img/Picture32.jpg" alt="Ерминия на палубе «Святой Анны». Стоит на руле. Август 1912 года." />
+        <img src="img/Picture32.jpg" alt="Ерминия на палубе «Святой Анны». Стоит на руле. Август 1912 года." />
         <figcaption>Ерминия на палубе «Святой Анны». Стоит на руле. Август 1912 года.</figcaption>
     </figure>
     <p>
@@ -1230,7 +1230,7 @@
     </p>
     <figure class="img">
         <img
-                src="/img/Picture33.jpg"
+                src="img/Picture33.jpg"
                 alt="Ерминия Жданко и Георгий Брусилов в каюте на «Святой Анне». Август 1912 года."
         />
         <figcaption>Ерминия Жданко и Георгий Брусилов в каюте на «Святой Анне». Август 1912 года.</figcaption>
@@ -1371,7 +1371,7 @@
             ученый Севастьянов и доктор.
             <figure class="img">
                 <img
-                        src="/img/Picture34.jpg"
+                        src="img/Picture34.jpg"
                         alt="Первая страница предпоследнего, пятого, письма Ерминии Жданко родителям. 27 августа 1912 года."
                 />
                 <figcaption>
@@ -1508,7 +1508,7 @@
     </p>
     <figure class="img img--right">
         <img
-                src="/img/Picture38.jpg"
+                src="img/Picture38.jpg"
                 alt="Первая страница последнего, прощального письма Ерминии Жданко к родителям. 1 сентября 1912 года."
         />
         <figcaption>
@@ -1564,7 +1564,7 @@
     </p>
     <figure class="img img--wide">
         <img
-                src="/img/Picture35.jpg"
+                src="img/Picture35.jpg"
                 alt="Конверт от последнего письма Ерминии Жданко. Слева — лицевая сторона, справа — обратная сторона."
         />
         <figcaption>
@@ -1708,7 +1708,7 @@
         эта слабая надежда постепенно исчезла.
     </p>
     <figure class="img img--right">
-        <img src="/img/Picture36.jpg" alt="Михаил Ефимович Жданко." />
+        <img src="img/Picture36.jpg" alt="Михаил Ефимович Жданко." />
         <figcaption>Михаил Ефимович Жданко.</figcaption>
     </figure>
     <p>
@@ -1752,7 +1752,7 @@
         причастность Ерминии Жданко к обоим событиям.
     </p>
     <figure class="img">
-        <img src="/img/Picture37.jpg" alt="Обложка книги Рене Гузи «В полярных льдах»." />
+        <img src="img/Picture37.jpg" alt="Обложка книги Рене Гузи «В полярных льдах»." />
         <figcaption>Обложка книги Рене Гузи «В полярных льдах».</figcaption>
     </figure>
     <p>
