перенес аннотацию про Ходкину вперед заголовка

--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
 </head>
 <body>
 <section class="home">
-    <p class="author">И. В. Ходкина</p>
-    <h1 class="main-title">
-        <span>О полярной экспедиции</span>
-        <span>Георгия Брусилова на шхуне «Святая Анна». 1912—1914 гг.</span>
-    </h1>
-    <p class="annotate"><b>Ирина Васильевна Ходкина</b> – дочь Татьяны Александровны Жданко, сестры <b>Ерминии Жданко</b>, которая,
+    <p class="annotate small"><b>Ирина Васильевна Ходкина</b> – дочь Татьяны Александровны Жданко, сестры <b>Ерминии Жданко</b>, которая,
         как известно, пропала навсегда в арктических льдах вместе с участниками полярной экспедиции Георгия Брусилова на
         "Святой Анне". Жданко и Брусиловы были родственниками и, несмотря на трудную судьбу этих семей в годы войн и
         репрессий начала и середины ХХ века, им удалось сохранить большой семейный архив. Часть его материалов, были
@@ -33,6 +28,11 @@
             1912-1914 гг. – журн. «Полярный музей»</b>, изд. Росс. госуд. музея Арктики и Антарктики, С-Пб., 2014, № 3, с.
         3-58]. Ниже представлена полная версия этой публикации.
     </p>
+    <p class="author">И. В. Ходкина</p>
+    <h1 class="main-title">
+        <span>О полярной экспедиции</span>
+        <span>Георгия Брусилова на шхуне «Святая Анна». 1912—1914 гг.</span>
+    </h1>
     <p class="annotate">
         Предлагаемый рассказ основан на документах из семейных архивов. В нем говорится об экспедиции Георгия Львовича
         Брусилова и ее подготовке, о самом Брусилове, а также о Ерминии Жданко и некоторых других людях, сыгравших свою
