--- a/index.html
+++ b/index.html
@@ -1235,9 +1235,9 @@
     <figure class="img img--right">
         <img
                 src="img/Picture45.jpg"
-                alt="Александр Ефимович Жданко» "
+                alt="Александр Ефимович Жданко"
         />
-        <figcaption>Александр Ефимович Жданко» </figcaption>
+        <figcaption>Александр Ефимович Жданко</figcaption>
     </figure>
     <p>
         В декабре 1891 года Александр Ефимович был прикомандирован к штабу Одесского военного округа, и в январе 1892 с
