--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         — гардемарином на пароходе Добровольного флота «Нижний Новгород» под военным флагом из Одессы во Владивосток и
         на
         Сахалин с заходами в Шанхай, Гонконг, Сингапур, порты Средиземного моря,
-        Лондон. По возвращении из рейса в 1879 году он был произведен в мичманы «2го Черноморского флотского Его
+        Лондон. По возвращении из рейса в 1879 году он был произведен в мичманы «2-го Черноморского флотского Его
         Королевского Высочества Герцога Эдинбургского экипажа».
     </p>
     <figure class="img img--right">
@@ -349,7 +349,7 @@
     [2].
     </p>
     <p>
-        В 1895 году Лев Алексеевич — капитан 2го ранга, позже — командир парохода «Колхида». В 1899 году Брусилов
+        В 1895 году Лев Алексеевич — капитан 2-го ранга, позже — командир парохода «Колхида». В 1899 году Брусилов
         получает
         назначение на Дальний Восток — флагкапитаном Штаба Начальника эскадры Тихого океана, и 15 июня на пароходе
         Добровольного флота «Петербург» выходит из Одессы. Тихоокеанская эскадра, которая базировалась в ПортАртуре,
@@ -459,7 +459,7 @@
     </p>
     <figure class="img img--right">
         <img src="img/Picture9.jpg" alt="Капитан 2-го ранга Лев Алексеевич Брусилов. Середина 1890х годов."/>
-        <figcaption>Капитан 2го ранга Лев Алексеевич Брусилов. Середина 1890х годов.</figcaption>
+        <figcaption>Капитан 2-го ранга Лев Алексеевич Брусилов. Середина 1890х годов.</figcaption>
     </figure>
     <p>
         В сложившихся условиях крейсера уже не могли предпринимать активных действий, и на миноносцы возлагалась задача
@@ -558,9 +558,9 @@
         где
         сформулировал основные ближайшие задачи флота. С его участием была разработана также «Малая Судостроительная
         программа на ближайшее четырехлетие», в рамках которой, в частности, был построен эскадренный миноносец «Новик»,
-        уникальный боевой корабль, не имевший аналогов в мире. В 1907 году Брусилов был произведен в контрадмиралы; в
+        уникальный боевой корабль, не имевший аналогов в мире. В 1907 году Брусилов был произведен в контр-адмиралы; в
         1908
-        году изза разногласий с морским министром и Государственной Думой он был вынужден оставить свой пост. В конце
+        году из-за разногласий с морским министром и Государственной Думой он был вынужден оставить свой пост. В конце
         года
         Лев Алексеевич тяжело заболел и был уволен в отставку в чине вицеадмирала. Скончался Лев Алексеевич Брусилов 25
         июня 1909 года.
@@ -626,7 +626,7 @@
         добровольцев.
     </p>
     <figure class="img img--right">
-        <img src="img/Picture12.jpg" alt="Контрадмирал Лев Алексеевич Брусилов. 1907год."/>
+        <img src="img/Picture12.jpg" alt="Контр-адмирал Лев Алексеевич Брусилов. 1907год."/>
         <figcaption>Контр-адмирал Лев Алексеевич Брусилов. 1907год.</figcaption>
     </figure>
     <p>
@@ -738,7 +738,7 @@
     </p>
     <p>
         Поскольку о дяде Георгия Львовича в основном известно лишь то, что он постоянно «задерживался с высылкой денег»,
-        изза чего его стали считать чуть ли ни главным виновником неудачи экспедиции, необходимо рассказать о нем под
+        из-за чего его стали считать чуть ли ни главным виновником неудачи экспедиции, необходимо рассказать о нем под
         робнее.
     </p>
     <p>
