--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta viewport="width=device-width, initial-scale=1">
-    <meta description="Полярная экспедиция Георгия Брусилова на шхуне «Святая Анна». 1912—1914 гг.">
+    <meta description="Полярная экспедиция Георгия Брусилова на шхуне «Святая Анна». 1912—1914 гг. Рассказ основан на документах из семейных архивов. В нем говорится об экспедиции Георгия Львовича
+        Брусилова и ее подготовке, о самом Брусилове, а также о Ерминии Жданко и некоторых других людях, сыгравших свою
+        роль в описываемых событиях.">
     <meta keywords="полярная экспедиция, георгий брусилова, святая анна, северный полюс">
     <link rel="icon" href="favicon.ico"/>
     <link rel="stylesheet" href="style.css">
@@ -98,7 +100,7 @@
         Альбановым и капитаном начались разногласия, которые очень скоро переросли в чрезвычайно тяжелые отношения. В
         этих
         условиях Валериан Альбанов обратился к Брусилову с просьбой разрешить ему покинуть судно. Он хотел попытаться
-        дойти по льду до Земли ФранцаИосифа, которая находилась южнее судна, в относительной близости от него. На одном
+        дойти по льду до Земли Франца-Иосифа, которая находилась южнее судна, в относительной близости от него. На одном
         из
         островов архипелага Альбанов надеялся найти базу предыдущих иностранных экспедиций, отдохнуть, заправиться
         провизией и уже оттуда добраться до населенных мест на Шпицбергене или Новой Земле.
@@ -128,7 +130,7 @@
     <p>
         Позднее Альбанов описал по дневникам, которые вел в пути, и по своим воспоминаниям это путешествие «на юг, к
         Земле
-        ФранцаИосифа». Его книга под таким названием вышла в Петербурге в декабре 1917 года. Она сразу привлекла
+        Франца-Иосифа». Его книга под таким названием вышла в Петербурге в декабре 1917 года. Она сразу привлекла
         внимание
         и впоследствии неоднократно переиздавалась и полностью, и в вольном изложении как в нашей стране, так и и за
         границей.
@@ -151,7 +153,7 @@
         Альбанова покинула судно, можно узнать из официального документа — судового журнала, в котором ежедневно
         записывались все события. Копию этого журнала Альбанов по поручению Брусилова сразу по прибытии в Архангельск
         переслал в Главное гидрографическое управление, и она была опубликована в 1914 г. Коечто можно прочитать и в
-        воспоминаниях Альбанова, хотя они посвящены в основном путешествию к Земле ФранцаИосифа. Однако ни судовой
+        воспоминаниях Альбанова, хотя они посвящены в основном путешествию к Земле Франца-Иосифа. Однако ни судовой
         журнал,
         ни Альбанов почти ничего не говорят о членах команды. Например, известно, что среди людей, оставшихся на судне,
         была девушка — молоденькая медсестра Ерминия Александровна Жданко. Но кто такая Ерминия Жданко и каким образом
@@ -352,7 +354,7 @@
         В 1895 году Лев Алексеевич — капитан 2-го ранга, позже — командир парохода «Колхида». В 1899 году Брусилов
         получает
         назначение на Дальний Восток — флагкапитаном Штаба Начальника эскадры Тихого океана, и 15 июня на пароходе
-        Добровольного флота «Петербург» выходит из Одессы. Тихоокеанская эскадра, которая базировалась в ПортАртуре,
+        Добровольного флота «Петербург» выходит из Одессы. Тихоокеанская эскадра, которая базировалась в Порт-Артуре,
         обеспечивала интересы России на Дальнем Востоке. Ее корабли совершали длительные плавания в океанских и
         прибрежных
         водах, проводили учебные высадки десанта, посещали порты Японии, Китая, Кореи. В марте 1900 года Россия вела
@@ -401,7 +403,7 @@
         это время был в командировке в Париже с секретной миссией по закупке крейсеров от Чили и Аргентины для усиления
         направлявшейся из Балтийского моря на Дальний Восток 2ой Тихоокеанской эскадры. Здесь он узнал о сдаче 20
         декабря
-        ПортАртура.
+        Порт-Артура.
         <i>
             «Сердце сжимается при одной мысли об этом тяжелом событии, но неизбежном, при нынешних обстоятельствах… Не
             время
@@ -513,7 +515,7 @@
         обезьян... Бухту Сабанг можно назвать естественным огромным аквариумом, и таких разнообразных и чудных по
         красоте цветов и форме рыбок я никогда не видел. Юра там на парусной шлюпке задумал пройти кругом острова,
         но
-        бился два дня, чуть не отправился на дно раков кормить, и всетаки кругом острова не обошел. На Цейлоне,
+        бился два дня, чуть не отправился на дно раков кормить, и все-таки кругом острова не обошел. На Цейлоне,
         вероятно, эта мысль ему не придет, т. к. ему пришлось бы употребить на обход острова на парусной шлюпке года
         два. Но вообще, плавание наше по обстановке очень тяжелое и напряженное, т. к. революционная пропаганда
         дошла и
@@ -782,7 +784,7 @@
         <figcaption>Сын Бориса Алексеевича Алеша на корейской лошадке.</figcaption>
     </figure>
     Однажды, чтобы порадовать своих маленьких племянниц Ольгу и Елену, Лев Алексеевич отправил им в Глебово
-    удивительный подарок. <i> «Милая Фитюлька, </i> — пишет он из ПортАртура любимой дочери Ксении в ноябре 1900
+    удивительный подарок. <i> «Милая Фитюлька, </i> — пишет он из Порт-Артура любимой дочери Ксении в ноябре 1900
     года,
     —
     <i>
